syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.Room_control";
option java_outer_classname = "Room_controlImpl";

package Room_control;

// Interface exported by the server.
service Room_control {
  
  rpc lights (changeIntensity) returns (stream lightsIntensity) {}
  
  rpc temperature (adjustTemperature) returns (newTemperature) {}
    
}

message changeIntensity {
  int32 level = 1;
    
}

message lightsIntensity {
  int32 newLvl = 1;
  string location = 2; 
}

message adjustTemperature {
	int32 temp = 1;
}

message newTemperature {
	int32 newTemp = 1;
}