syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.Smart_Intravenous";
option java_outer_classname = "Smart_IntravenousImpl";

package Smart_Intravenous;

// Interface exported by the server.
service Smart_Intravenous {
  
  rpc setFlowR(flowRate) returns (confirmFRate) {}
  rpc alertDose (sendStatus) returns (alertMessage) {}
}

message flowRate{
	int32 dropsPS = 1;
}

message confirmFRate {
	string setRate = 1;
}

message sendStatus {
	string status = 1;  
}

message alertMessage {
	string alert = 1;
}
